# patternforge

./: .gitignore  AUDIT_STRUCTURED_SOLVER.md  CLAUDE.md  EMPTY_EXCLUDE_ANALYSIS.md  EXACT_MODE_BUG_FIX.md  EXPANSION_EFFICIENCY.md  EXPRESSION_BASED_SOLVER_COMPLEXITY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PATTERN_EXAMPLES.md  PERFORMANCE_ANALYSIS.md  README.md  STRUCTURED_API_GUIDE.md  STRUCTURED_API_IMPROVEMENTS.md  STRUCTURED_SOLVER_GUIDE.md  TERM_BASED_SOLVER_COMPLEXITY.md  TEST_INTEGRATION_SUMMARY.md  USER_GUIDE.md  __init__.py  debug_exact_mode.py  debug_memory_test.py  debug_splitmethod.py  input.txt  pyproject.toml  solution.json  test_results.txt
claude/: CLAUDE.md
codex/: __init__.py  cli.py  io.py  schema.py
examples/: 01_quick_start.py  02_single_field_patterns.py  03_structured_patterns.py  04_performance_scaling.py  README.md  advanced_examples.py  complex_pattern_examples.py  showcase_examples.py  simplified_api_example.py  structured_examples.py  truly_advanced_examples.py
pyrefpy/: __init__.py  __main__.py
tests/: conftest.py  test_bitset.py  test_candidates.py  test_cli.py  test_complex_terms.py  test_custom_tokenizers.py  test_edge_cases.py  test_empty_exclude.py  test_exact_mode.py  test_explain.py  test_explain_by_field.py  test_flattened_api.py  test_idf.py  test_integration.py  test_integration_realworld.py  test_io_schema.py  test_matcher.py  test_minus_patterns.py  test_models.py  test_pyrefpy.py  test_rectangles.py  test_solver.py  test_solver_parser.py  test_splitmethod_char.py  test_structured_comprehensive.py  (+3 more)
(+21 files in other folders)
